--- a/unsloth_test.ipynb
+++ b/unsloth_test.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Enhanced LLM-Powered Bag Recommendation System with Unsloth"
+    "# Bag Recommendation System with Unsloth"
    ]
   },
   {
